1. Collection API Улучшения[#114076]